--- a/my-values.yml
+++ b/my-values.yml
@@ -1,2 +1,2 @@
 Value1: some-val
-DbConString: "Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=abc)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=abc)));User Id = abc; Password = abc;"
+DbConString: Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=abc)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=abc)));User Id = abc; Password = abc;
